
syntax = "proto3";

option go_package = "example.com/helloRPC/chat";


package chat;

// The greeting service definition.
service MyFirstService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
  rpc Other (DataReq) returns (DataRes) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}


message DataReq {
  int32 amount = 1;
}

message DataRes {
  int32 amount = 1;
}